--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,4 +4,8 @@ html
     title HypeDrop v.1
     link(rel='stylesheet', href='/bootstrap/css/bootstrap.min.css') 
 
+    script(src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js", type='text/javascript')
+    script(src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.3/underscore-min.js", type='text/javascript')
+    script(src='/main.js', type='text/javascript')
+
   body!= body
